# powerplant-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py  production_plan.py
app/core/: config.py  errors.py  logging.py
app/models/: payload.py
app/models/production_plan/: payload.py  response.py
app/services/: dispatch.py
docker/: Dockerfile
